# xops

./: Cargo.toml  LICENSE-MIT  README.md
algop_core/: Cargo.toml
algop_core/src/: binop.rs  lib.rs  utils.rs
algop_core/src/binop/: parse.rs  write.rs
algop_macros/: Cargo.toml
algop_macros/src/: lib.rs  utils.rs
builder_extra/: Cargo.toml
builder_extra/src/: internal.rs  lib.rs
builder_extra_macro/: Cargo.toml
builder_extra_macro/src/: lib.rs
src/: lib.rs  tests.rs
testing/: Cargo.toml
testing/src/: main.rs
xops_core/: Cargo.toml  README.md
xops_core/src/: binop.rs  lib.rs  utils.rs
xops_core/src/binop/: parse.rs  write.rs
xops_macros/: Cargo.toml  README.md
xops_macros/src/: lib.rs  utils.rs
