[package]
name = "xops"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hmcol/xops"
description = """
procedural macros for overloading operators
"""

[workspace]
members = [
    "xops_macros",
    "xops_core",
]

[dependencies]
xops_macros = { version = "0.1.0", path = "xops_macros" }