[package]
name = "builder_extra_macro"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
builder_extra = { path = "../builder_extra" }
proc-macro2 = "1.0"
quote = "1.0"
derive_builder = "0.10.2"

[dependencies.syn]
version = "1.0"
features = ["extra-traits", "full"]