[package]
name = "xops_core"
version = "0.1.1"
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/hmcol/xops"
description = """
core parsing and codegen for xops
"""

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
darling = "0.13.0"

[dependencies.syn]
version = "1.0"
features = ["extra-traits", "full"]